<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView android:background="#000000" android:textSize="20sp" android:layout_height="wrap_content" android:text="@string/title_rss" android:textStyle="bold" android:textColor="#AAAAAA" android:layout_width="match_parent" android:id="@+id/rubrique" ></TextView>
    <LinearLayout android:id="@+id/spacer1" android:orientation="vertical" android:layout_height="20dip" android:layout_width="match_parent"></LinearLayout>
    <TextView android:background="#22000000" android:textSize="20sp" android:layout_height="wrap_content" android:text="" android:layout_width="match_parent" android:textColor="#000000" android:id="@+id/title" ></TextView>
    <TextView android:background="#22000000" android:textSize="10sp" android:layout_height="wrap_content" android:text="" android:layout_width="match_parent" android:textColor="#555555" android:textStyle="italic" android:id="@+id/date" ></TextView>
	<ScrollView android:layout_height="0dip" android:layout_weight="1" android:layout_width="match_parent" android:fillViewport="true" android:id="@+id/scroll">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <ImageView
	            android:id="@+id/image"
	            android:layout_width="match_parent"
	            android:layout_height="120dip"
	            android:layout_margin="4dip"
	            android:layout_weight="0.10"
	            android:contentDescription="@string/article_photo"
	            android:scaleType="fitCenter"
	            android:src="@drawable/icon" >
	        </ImageView>

	        <TextView
	            android:id="@+id/description"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.80"
	            android:gravity="left|right"
	            android:text=""
	            android:textSize="15sp" >
	        </TextView>

	        <TextView
	            android:id="@+id/streamText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.10"
				android:gravity="left|right"
	            android:text=""
	            android:textSize="15sp" >
	       </TextView>
				

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/play"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_play" />

	        <ProgressBar
	            android:id="@+id/progress"
	            style="@android:style/Widget.ProgressBar.Horizontal"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight="62.74"
	            android:max="100"
	            android:progress="0" />

	    </LinearLayout>
	    
		 </LinearLayout>
    </ScrollView>


</LinearLayout>